[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/FONT-Bebas-neue.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
extra_spacing_top = 5
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.49831
margin_bottom = 1.49829
color = Color( 0.380392, 0.670588, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.5017
margin_top = 25.0
margin_right = -26.4983
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Label" parent="TextureRect/VBoxContainer"]
margin_right = 350.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
text = "TOWER DEFENSE
(logo)"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="TextureRect/VBoxContainer"]
margin_top = 87.0
margin_right = 350.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="VBoxContainer" parent="TextureRect/VBoxContainer/CenterContainer"]
margin_left = 75.0
margin_top = 215.0
margin_right = 275.0
margin_bottom = 367.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 13
alignment = 1

[node name="NewFreeGameButton" type="Button" parent="TextureRect/VBoxContainer/CenterContainer/MenuButtons"]
margin_right = 200.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "New free game"

[node name="LoadFreeGameButton" type="Button" parent="TextureRect/VBoxContainer/CenterContainer/MenuButtons"]
margin_top = 55.0
margin_right = 200.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 2 )
text = "Load free game"

[node name="ExitButton" type="Button" parent="TextureRect/VBoxContainer/CenterContainer/MenuButtons"]
margin_top = 110.0
margin_right = 200.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
[connection signal="pressed" from="TextureRect/VBoxContainer/CenterContainer/MenuButtons/NewFreeGameButton" to="." method="_on_NewFreeGameButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/CenterContainer/MenuButtons/LoadFreeGameButton" to="." method="_on_LoadFreeGameButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/CenterContainer/MenuButtons/ExitButton" to="." method="_on_ExitButton_pressed"]
